# vela

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .mypy.ini  Dockerfile  Pipfile  README.md  alembic.ini  asgi.py  pyproject.toml  style.sh  tox.ini  vela.sql
.github/workflows/: build.yaml  ci.yaml  test.yaml
alembic/: env.py
alembic/versions/: 02a7b4c44f52_alter_reward_adjustment_params.py  02a7b4c44f52_alter_reward_adjustment_token_param_.py  06138a675f48_add_transaction.py  0f83098dbbd3_init_db.py  142af407012d_add_retrytaskstatuses_retrying.py  1583840ffde6_voucher_status_adjustment_task.py  18f839b5356c_earn_rules.py  1b9f316f24cc_retry_tasks_lib_tables.py  2ab95f7a285a_processed_transaction.py  2acb5796973c_max_amount_for_earn_rules.py  3b5af0db00a6_alter_earn_inc_is_tx_value_col.py  3b5af0db00a6_v1_release_squashed_init.py  3f6fbe70f78f_reward_adjustment.py  41021c7eea75_retailer_status.py  47a03ac26b52_allocation_window.py  4eadb28814a1_reward_adjustment.py  56f574e9e809_payment_transaction_id_column.py  5f7726d12bc5_campaign_balances_tasks.py  6435085f69d3_numeric_earn_multiplier.py  6480cdb258da_rename_voucher_type_slug.py  68e369858366_init_db.py  6f65ef0de5de_new_cancel_account_holder_rewards_task.py  80f584ab1fcc_transaction_status_column.py  95e386af3cb0_update_status_enum.py  a0409f391ea3_add_second_idempotency_token_for_reward_.py  ade88ecebf6b_add_task_type_key_for_reward_adjustment_.py  aebe2746a51d_add_new_proccess_pending_rewards_task.py  b51685975bb0_update_retrytasks_library_tasktype_model.py  ba653772a35c_change_processed_transaction_id_to_.py  c30dc9ed0511_add_transaction.py  c6f1f3c7d09d_nullable_campaign_start_date.py  e7d9ae47759c_add_transaction.py  e7ead84a0d44_rewardrule_table.py  e81c2a872f88_correction_make_retry_tasks_error_.py  ed1ba3d8bc45_remove_unrequired_indices.py  ef18dc97bc42_campaign_and_earn_rule_fks_not_null.py  f00aa9d2ba8d_campaign_start_and_end.py
app/: __init__.py  enums.py  internal_requests.py
app/activity_utils/: __init__.py  enums.py  schemas.py  tasks.py  utils.py
app/api/: api.py  deps.py  healthz.py  tasks.py
app/api/endpoints/: __init__.py  campaign.py  retailer.py  transaction.py
app/core/: cli.py  config.py  exception_handlers.py  key_vault.py  middleware.py  reporting.py  utils.py
app/crud/: __init__.py  campaign.py  retailer.py  transaction.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  retailer.py  transaction.py
app/scheduled_tasks/: scheduler.py
app/schemas/: __init__.py  activities.py  campaign.py  retailer.py  transaction.py
app/tasks/: __init__.py  campaign_balances.py  error_handlers.py  pending_rewards.py  prometheus.py  reward_adjustment.py  reward_status_adjustment.py  transaction.py  voucher_status_adjustment.py  worker.py
app/tasks/prometheus/: asynchronous.py  synchronous.py
app/tests/api/: conftest.py  test_retailer.py
app/tests/unit/: conftest.py
tests/: conftest.py
tests/api/: conftest.py  test_campaign.py  test_exception_handlers.py  test_retailer.py  test_transaction.py
tests/functional/: conftest.py  test_internal_requests.py  test_models_methods.py  test_scheduled_tasks.py  test_task_error_handlers.py  test_tasks.py
tests/functional/api/: test_activities.py  test_tasks.py
tests/unit/: conftest.py  test_enums.py  test_error_handlers.py  test_metrics.py  test_tasks.py  test_utils.py
tests/unit/api/: test_deps.py  test_tasks.py
tx_history_migration/: cli.py  polaris_db.py  processed_txs_handler.py  send_activity.py
vela/: __init__.py  enums.py  internal_requests.py
vela/activity_utils/: enums.py  schemas.py  tasks.py  utils.py
vela/alembic/: env.py
vela/alembic/versions/: 02b35d82ec64_reward_slug_not_unique.py  2acb5796973c_max_amount_for_earn_rules.py  31aa97c88ea9_alter_task_paths.py  3b5af0db00a6_v1_release_squashed_init.py  41021c7eea75_retailer_status.py  56f574e9e809_payment_transaction_id_column.py  6f65ef0de5de_new_cancel_account_holder_rewards_task.py  7058002812c0_add_activity_datetime_to_cancel_account_.py  80f584ab1fcc_transaction_status_column.py  823f35823186_add_reward_cap_enum_column_to_reward_.py  8ae0833855f3_add_retry_task_status_index.py  ade88ecebf6b_add_task_type_key_for_reward_adjustment_.py  aebe2746a51d_add_new_proccess_pending_rewards_task.py  b3cb4a2f8231_increase_max_length_of_campaign_slug.py  b5161b249af5_add_cleanup_handler_path.py  ba653772a35c_change_processed_transaction_id_to_.py  fc93be5fcde2_store_table.py
vela/api/: api.py  deps.py  healthz.py  tasks.py
vela/api/endpoints/: campaign.py  retailer.py  transaction.py
vela/core/: cli.py  config.py  exception_handlers.py  key_vault.py  reporting.py  utils.py
vela/crud/: __init__.py  campaign.py  retailer.py  transaction.py
vela/db/: base.py  base_class.py  session.py
vela/models/: __init__.py  retailer.py  transaction.py
vela/scheduled_tasks/: scheduler.py  task_cleanup.py
vela/schemas/: __init__.py  campaign.py  transaction.py
vela/tasks/: __init__.py  campaign_balances.py  error_handlers.py  pending_rewards.py  reward_adjustment.py  reward_cancellation.py  reward_status_adjustment.py
vela/tasks/prometheus/: asynchronous.py  metrics.py  synchronous.py
